Curly quote changed

--- a/_layouts/500.html
+++ b/_layouts/500.html
@@ -17,7 +17,7 @@
         <header class="error_header u-mt30">
             <h1 class="superheader">500 internal server error</h1>
             <p class="short_desc">That didn’t work the way it was supposed to. You
-                might want to try again in a little bit. We'll try to resolve
+                might want to try again in a little bit. We’ll try to resolve
                 the issue.
             </p>
         </header>
