Putting the 404 back in 404 pages
## Changes
* Updated the title and description to be slightly more descriptive, if not excitingly so.
* Made the 404 error message the h1, similar to the 500.

--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -1,11 +1,11 @@
 {% extends "layout-full.html" %}
 
 {% block title -%}
-    404 error
+    404 error: not found
 {%- endblock %}
 
 {% block desc -%}
-    404 error
+    404 error: the page requested could not be found
 {%- endblock %}
 
 {% block content_modifiers -%}
@@ -15,9 +15,9 @@
 {% block content_main %}
     <div class="error_copy_container">
         <header class="error_header u-mt30">
-            <h1 class="superheader">Something’s disconnected.</h1>
-            <p class="short_desc">We couldn’t find the exact page you 
-            were looking for, but we have other information that may be useful.
+            <h1 class="superheader">404: not found.</h1>
+            <p class="short_desc">Something’s disconnected. We can’t find the exact 
+            page you’re looking for, but we have other information that may be useful.
             </p>
         </header>
         <aside class="error_action_container padded-container u-mt60 u-mb60">
