Fixes DF-1766 - update cf-buttons to 1.4.2
- Fixes DF-1766 - update cf-buttons to 1.4.2
- Re-generates assets.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -82,6 +82,7 @@
    @import combined CF components Less file and make any overrides.
    ========================================================================== */
 
+// Combined CF components.
 @import (less) "../../vendor/cf-concat/cf.less";
 
 // The Capital Framework (CF) brand color palette.
