--- a/_includes/contact-macro.html
+++ b/_includes/contact-macro.html
@@ -13,21 +13,23 @@
     {%- endif %}
     </div>
     <div class="content-l_col content-l_col-1-2">
-    {%- if contact.email_addr or contact.phone_num or contact.fax_num %}
+    {%- if contact.email_addr or contact.phone_num or contact.fax_num or contact.street %}
         <ul class="list list__icons">
         {%- if contact.email_addr %}
             <li class="list_item u-break-word">
                 <span class="cf-icon cf-icon-email list_icon"></span>
-                <span class="list_text">
+                <span class="h5 list_text">Email:</span>
+                <p class="list_text">
                     <a class="list_link" href="mailto:{{ contact.email_addr }}">
                         {{ contact.email_addr }}
                     </a>
-                </span>
+                </p>
             </li>
         {%- endif %}
         {%- if contact.email_2_addr %}
             <li class="list_item u-break-word">
                 <span class="cf-icon cf-icon-email list_icon"></span>
+                <span class="h5 list_text">Email (Alt):</span>
                 <span class="list_text">
                     <a class="list_link" href="mailto:{{ contact.email_2_addr }}">
                         {{ contact.email_2_addr }}
@@ -38,49 +40,57 @@
         {%- if contact.phone_num %}
             <li class="list_item">
                 <span class="cf-icon cf-icon-phone list_icon"></span>
-                <span class="short-desc list_text">
+                <span class="h5 list_text">Phone:</span>
+                <p class="short-desc">
                     {{ format_phone(contact.phone_num) }}
-                </span>
-            {%- if contact.phone_desc %}
-                <span class="micro-copy micro-copy__large">
-                    {{ contact.phone_desc }}
-                </span>
-            {%- endif %}
+                {%- if contact.phone_desc %}
+                        <br>
+                        <span class="micro-copy micro-copy__large">
+                            {{ contact.phone_desc }}
+                        </span>
+                {%- endif %}
+                </p>
             </li>
         {%- endif %}
         {%- if contact.phone_2_num %}
             <li class="list_item">
                 <span class="cf-icon cf-icon-phone list_icon"></span>
-                <span class="short-desc list_text">
+                <span class="h5 list_text">Phone (Alt):</span>
+                <p class="short-desc">
                     {{ format_phone(contact.phone_2_num) }}
-                </span>
+                </p>
             </li>
         {%- endif %}
         {%- if contact.fax_num %}
             <li class="list_item">
                 <span class="cf-icon cf-icon-fax list_icon"></span>
-                <span class="short-desc list_text">
+                <span class="h5 list_text">Fax:</span>
+                <p class="short-desc">
                     {{ format_phone(contact.fax_num) }}
-                </span>
+                </p>
+            </li>
+        {%- endif %}
+        {%- if contact.street %}
+            <li class="list_item">
+                <span class="cf-icon cf-icon-mail list_icon"></span>
+                <span class="h5 list_text">Mailing Address:</span>
+                <p class="short-desc">
+                    Consumer Financial Protection Bureau<br>
+                    {{ contact.attn if contact.attn }}<br>
+                    {{ contact.street + '<br>'|safe if contact.street }}
+                    {{ contact.city + ',' if contact.city }}
+                    {{ contact.state if contact.state }}
+                    {{ contact.zip_code if contact.zip_code }}
+                {%- if contact.addr_desc %}
+                    <br>
+                    <span class="micro-copy">
+                        {{ contact.addr_desc }}
+                    </span>
+                {%- endif %}
+                </p>
             </li>
         {%- endif %}
         </ul>
-    {%- endif %}
-    {%- if contact.street %}
-        <p class="short-desc">
-            Consumer Financial Protection Bureau<br>
-            {{ contact.attn if contact.attn }}<br>
-            {{ contact.street + '<br>'|safe if contact.street }}
-            {{ contact.city + ',' if contact.city }}
-            {{ contact.state if contact.state }}
-            {{ contact.zip_code if contact.zip_code }}
-        {%- if contact.addr_desc %}
-            <br>
-            <span class="micro-copy">
-                {{ contact.addr_desc }}
-            </span>
-        {%- endif %}
-        </p>
     {%- endif %}
     </div><!-- END .content-l_col -->
 </div><!-- END .content-l -->
