--- a/_includes/category-slug.html
+++ b/_includes/category-slug.html
@@ -21,10 +21,10 @@
 
    ========================================================================== #}
 
-{%- macro render(category, path, classes) %}
+{%- macro render(category, path, classes, use_blog_category=False) %}
 {%- from "post-macros.html" import category_icon as category_icon -%}
-{%- if category|lower == 'blog' %}
-    {% set filter_path = path + '?filter_type=post' %}
+{%- if use_blog_category %}
+    {% set filter_path = path + '?filter_blog_category=' + category|urlencode|replace('%20', '+') %}
 {%- else -%}
     {% set filter_path = path + '?filter_category=' + category|urlencode|replace('%20', '+') %}
 {% endif -%}
