Added Contact Us to navigation
- Reverted navs from Contact Us redacting

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,13 +42,13 @@
             </ul>
             <ul class="footer_nav-list">
                 <li class="list_item">
-                    <a class="list_link" href="/newsroom/">
-                        Newsroom
+                    <a class="list_link" href="/contact-us/">
+                        Contact Us
                     </a>
                 </li>
                 <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
+                    <a class="list_link" href="/newsroom/">
+                        Newsroom
                     </a>
                 </li>
                 <li class="list_item">
