--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
                                 <a class="list_link" href="/newsroom/">Newsroom</a>
                             </li>
                             <li class="list_item list-expanding_list-item">
-                                <a class="list_link list_link__disabled" href="#" style="cursor:default;color:#babbbd!important;border: none !important;">TBD Content</a>
+                                <a class="list_link" href="/contact-us/">Contact Us</a>
                             </li>
                             <li class="list_item list-expanding_list-item">
                                 <a class="list_link" href="/the-bureau/">About the Bureau</a>
