--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,31 @@
 
         <div class="footer-pre">
 
+            <button class="btn footer_top-button"> Return to top </button>
+
+            <ul class="footer_nav-list">
+                <li class="list_item">
+                    <a class="list_link" href="/contact-us/">
+                        Contact Us
+                    </a>
+                </li>
+                <li class="list_item">
+                    <a class="list_link" href="/newsroom/">
+                        Newsroom
+                    </a>
+                </li>
+                <li class="list_item">
+                    <a class="list_link list_link__disabled">
+                        TBD Content
+                    </a>
+                </li>
+                <li class="list_item">
+                    <a class="list_link list_link__disabled">
+                        TBD Content
+                    </a>
+                </li>
+            </ul>
+
             <ul class="footer_share-icon-list">
                 <li class="list_item">
                     <a class="share-icon share-icon__large"
@@ -40,147 +65,10 @@
                     </a>
                 </li>
             </ul>
-            <ul class="footer_nav-list">
-                <li class="list_item">
-                    <a class="list_link" href="/contact-us/">
-                        Contact Us
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="/newsroom/">
-                        Newsroom
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-            </ul>
-
         </div><!-- END .footer-pre -->
 
         <div class="footer-left-right footer_nested-col-group">
-
-            <div class="footer-right">
-                <div class="footer_nested-col-group">
-                    <div class="footer_col">
-                        <h2 class="h6">
-                            TBD Content
-                        </h2>
-                        <ul class="footer_list">
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer_col">
-                        <h2 class="h6">
-                            TBD Content
-                        </h2>
-                        <ul class="footer_list">
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer_col">
-                        <h2 class="h6">
-                            TBD Content
-                        </h2>
-                        <ul class="footer_list">
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer_col">
-                        <h2 class="h6">
-                            TBD Content
-                        </h2>
-                        <ul class="footer_list">
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link list_link__disabled">
-                                    TBD Content
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div><!-- END .footer_nested-col-group -->
-            </div><!-- END .footer-right -->
-
-            <div class="footer-left">
-                <div class="footer_nested-col-group">
-                    <p class="footer_address">
-                        <span class="footer_address-word-break">
-                            Consumer Financial
-                        </span>
-                        Protection Bureau<br>
-                        1700 G Street, NW<br>
-                        Washington, D.C. 20552
-                    </p>
-                    <div class="footer_general-inqueries">
-                        <h4 class="footer_general-inqueries-label">
-                            <i>For general inquiries only</i>
-                        </h4>
-                        <ul class="list list__links">
-                            <li class="list_item">
-                                <a class="list_link footer_general-inqueries-phone" href="tel:202-435-7000">
-                                    (202) 435-7000
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a class="list_link" href="mailto:info@consumerfinance.gov">
-                                    info@consumerfinance.gov
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div><!-- END .footer_nested-col-group -->
-            </div><!-- END .footer-left -->
-
-        </div><!-- END .footer_nested-col-group -->
-
-        <div class="footer-post">
-            <ul class="footer_long-list">
+            <ul class="footer_list">
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
                         TBD Content
@@ -197,30 +85,26 @@
                     </a>
                 </li>
                 <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-                <li class="list_item">
-                    <!-- TODO Add href for link to
-                    http://www.consumerfinance.gov/open/
-                    when that address is finalized.
-                    -->
                     <a class="list_link list_link__disabled">
                         TBD Content
                     </a>
                 </li>
             </ul>
+            <ul class="footer_list">
+                <li class="list_item">
+                    <a class="list_link list_link__disabled">
+                        TBD Content
+                    </a>
+                </li>
+                <li class="list_item">
+                    <a class="list_link list_link__disabled">
+                        TBD Content
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer-post">
             <ul class="footer_long-list">
                 <li class="list_item">
                     <a class="list_link icon-link icon-link__external-link" href="http://usa.gov/">
@@ -233,6 +117,13 @@
                     </a>
                 </li>
             <ul>
+            <ul class="footer_long-list">
+                <li class="list_item">
+                    <p class="footer_official-website">
+                        <span class="cf-icon cf-icon-star"></span> An official website of the United States Government
+                    </p>
+                </li>
+            </ul>
         </div><!-- END .footer-post -->
 
     </aside><!-- END .wrapper.wrapper__match-content -->
