--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,63 +67,67 @@
             </ul>
         </div><!-- END .footer-pre -->
 
-        <div class="footer-left-right footer_nested-col-group">
-            <ul class="footer_list">
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-            </ul>
-            <ul class="footer_list">
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link list_link__disabled">
-                        TBD Content
-                    </a>
-                </li>
-            </ul>
-        </div>
 
+            <div class="footer-middle-left footer_nested-col-group">
+
+                <div class="footer_col">
+                    <ul class="footer_list">
+                        <li class="list_item">
+                            <a class="list_link list_link__disabled">
+                                TBD Content
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link list_link__disabled">
+                                TBD Content
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link list_link__disabled">
+                                TBD Content
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link list_link__disabled">
+                                TBD Content
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer_col">
+                    <ul class="footer_list">
+                        <li class="list_item">
+                            <a class="list_link list_link__disabled">
+                                TBD Content
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link list_link__disabled">
+                                TBD Content
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        <div class="footer-middle-right">
+                <ul class="footer_list">
+                    <li class="list_item">
+                        <a class="list_link icon-link icon-link__external-link" href="http://usa.gov/">
+                            USA.gov
+                        </a>
+                    </li>
+                    <li class="list_item">
+                        <a class="list_link icon-link icon-link__external-link" href="http://www.federalreserve.gov/oig/default.htm">
+                            Office of Inspector General
+                        </a>
+                    </li>
+                <ul>
+        </div>
         <div class="footer-post">
-            <ul class="footer_long-list">
-                <li class="list_item">
-                    <a class="list_link icon-link icon-link__external-link" href="http://usa.gov/">
-                        USA.gov
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link icon-link icon-link__external-link" href="http://www.federalreserve.gov/oig/default.htm">
-                        Office of Inspector General
-                    </a>
-                </li>
-            <ul>
-            <ul class="footer_long-list">
-                <li class="list_item">
-                    <p class="footer_official-website">
-                        <span class="cf-icon cf-icon-star"></span> An official website of the United States Government
-                    </p>
-                </li>
-            </ul>
+            <p class="footer_official-website">
+                An official website of the United States Government
+            </p>
         </div><!-- END .footer-post -->
 
     </aside><!-- END .wrapper.wrapper__match-content -->
