Adding Back to Top button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
         <div class="footer-pre">
 
-            <button class="btn footer_top-button"> Return to top </button>
+            <button class="btn btn__secondary footer_top-button"> Back to top <span class="cf-icon cf-icon-arrow-up"></span></button>
 
             <ul class="footer_nav-list">
                 <li class="list_item">
