reverting to original breakpoints

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -68,7 +68,7 @@
         </div><!-- END .footer-pre -->
 
 
-            <div class="footer-middle-left footer_nested-col-group">
+            <div class="footer-middle-left">
 
                 <div class="footer_col">
                     <ul class="footer_list">
